# mcp-ibkr-options

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/mcp_ibkr_options/: __init__.py  config.py  ibkr_client.py  server.py  session_manager.py
tests/: __init__.py  conftest.py  test_config.py  test_server.py  test_session_manager.py
